# Data-Science-

./: .gitattributes  .gitignore  PROJECTS_INTERVIEW_NOTES.md  README.md
SoloProjects/DiaryLens/: .env.example  .gitignore  00_project_identity.md  01_inputs_and_pipeline.md  02_report_format_and_rules.md  03_modes_and_memory.md  README.md  chatgpt_project_instructions.md  diarylens_ask_history_retrieval_experiment.md  pyproject.toml
SoloProjects/DiaryLens/data/: README.md
SoloProjects/DiaryLens/docs/: architecture.md  ask_history.md  evaluation.md  pipeline.md  project_context_summary.md  quality_checklist.md
SoloProjects/DiaryLens/experiments/: day_first_retrieval.ipynb  res.md  retrieval_labeling_df.csv  retrieval_labeling_df_labeled.csv
SoloProjects/DiaryLens/prompts/: ask_history.md  daily_extraction.md  daily_verification.md  weekly_aggregation.md  weekly_report.md
SoloProjects/DiaryLens/src/diarylens/: __init__.py  cli.py  config.py  daily_extractor.py  day_splitter.py  json_utils.py  llm_client.py  pdf_extractor.py  report_generator.py  schemas.py  telegram_bot.py  text_cleaner.py  week_runner.py  weekly_aggregator.py
SoloProjects/DiaryLens/tests/: conftest.py  test_ask_history_chunking.py  test_ask_history_day_index.py  test_ask_history_pipeline.py  test_ask_history_retrieval.py  test_cli.py  test_cli_ask_history.py  test_daily_extractor.py  test_day_splitter.py  test_llm_client.py  test_pdf_extractor.py  test_report_generator.py  test_schemas.py  test_telegram_bot.py  test_text_cleaner.py  test_week_runner.py  test_weekly_aggregator.py
(+94 files in other folders)
