[project]
name = "diarylens"
version = "0.1.0"
description = "Weekly diary analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gigachat>=0.1.43",
    "json-repair>=0.30",
    "pypdf>=4.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
diarylens = "diarylens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diarylens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
